# marith

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
template/: template.html
