[package]
name = "marith"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
